# mk

./: .gitignore  CMakeLists.txt  README.md  aarch64-arm-none-eabi.cmake  aarch64-none-elf.cmake
arm64/: CMakeLists.txt
kern/: CMakeLists.txt  config.h.in
kernel/: CMakeLists.txt  config.h.in
kernel/arm64/: CMakeLists.txt  arm64_config.h.in  arm64_start.S
